--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mobile First</title>
     <link rel="shortcut icon" href="/image/Logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/scss.css">
 </head>
